--- a/ICP/ICP.vcxproj
+++ b/ICP/ICP.vcxproj
@@ -174,6 +174,15 @@
     <ClInclude Include="lua_interface.h" />
     <ClInclude Include="shaders.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="resources\shaders\basic.frag" />
+    <None Include="resources\shaders\basic.vert" />
+    <None Include="resources\shaders\basic_tex.frag" />
+    <None Include="resources\shaders\basic_tex.vert" />
+    <None Include="resources\shaders\toon.frag" />
+    <None Include="resources\shaders\toon.vert" />
+    <None Include="resources\shaders\toon_uni.frag" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
