Readded source code for generating simple meshes

--- a/ICP/ICP.vcxproj.filters
+++ b/ICP/ICP.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="texture.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="mesh_gen.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="globals.h">
@@ -75,6 +78,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="texture.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="mesh_gen.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
