Generate and draw floor with placeholder texture

--- a/ICP/ICP.vcxproj.filters
+++ b/ICP/ICP.vcxproj.filters
@@ -107,4 +107,9 @@
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="resources\placeholder.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
