--- a/ICP/ICP.vcxproj
+++ b/ICP/ICP.vcxproj
@@ -193,6 +193,7 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="resources\placeholder.png" />
+    <Image Include="resources\transparent.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
