--- a/ICP/ICP.vcxproj
+++ b/ICP/ICP.vcxproj
@@ -157,6 +157,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Audio_reader.cpp" />
     <ClCompile Include="glerror.cpp" />
     <ClCompile Include="globals.cpp" />
     <ClCompile Include="ICP.cpp" />
@@ -170,6 +171,7 @@
     <ClCompile Include="texture.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Audio_reader.h" />
     <ClInclude Include="callbacks.h" />
     <ClInclude Include="glerror.h" />
     <ClInclude Include="globals.h" />
@@ -183,6 +185,7 @@
     <ClInclude Include="texture.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="packages.config" />
     <None Include="resources\shaders\basic.frag" />
     <None Include="resources\shaders\basic.vert" />
     <None Include="resources\shaders\basic_tex.frag" />
@@ -197,5 +200,12 @@
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
+    <Import Project="..\packages\boost.1.78.0\build\boost.targets" Condition="Exists('..\packages\boost.1.78.0\build\boost.targets')" />
   </ImportGroup>
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\boost.1.78.0\build\boost.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\boost.1.78.0\build\boost.targets'))" />
+  </Target>
 </Project>
