Proper Arrow model

--- a/ICP/ICP.vcxproj
+++ b/ICP/ICP.vcxproj
@@ -198,6 +198,13 @@
     <Image Include="resources\placeholder.png" />
     <Image Include="resources\transparent.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="resources\models\arrowv3.obj">
+      <FileType>Document</FileType>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </Resource>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
     <Import Project="..\packages\boost.1.78.0\build\boost.targets" Condition="Exists('..\packages\boost.1.78.0\build\boost.targets')" />
