--- a/ICP/ICP.vcxproj.filters
+++ b/ICP/ICP.vcxproj.filters
@@ -121,6 +121,9 @@
     <Image Include="resources\transparent.png">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="resources\ArrowTex.png">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <Resource Include="resources\models\arrowv3.obj">
