Colision with height map

--- a/ICP/ICP.vcxproj
+++ b/ICP/ICP.vcxproj
@@ -200,6 +200,7 @@
     <Image Include="resources\ArrowTex.png" />
     <Image Include="resources\placeholder.png" />
     <Image Include="resources\target.png" />
+    <Image Include="resources\terrain.png" />
     <Image Include="resources\transparent.png" />
   </ItemGroup>
   <ItemGroup>
