--- a/ICP/ICP.vcxproj.filters
+++ b/ICP/ICP.vcxproj.filters
@@ -133,6 +133,9 @@
     <Image Include="resources\target.png">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="resources\terrain.png">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <Resource Include="resources\models\arrowv3.obj">
